Automatically backed up by Learn

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -3,7 +3,7 @@
 <input type="text" name="title">
 <label for="content">Content:</label>
 <input type="text" name="content">
-
+<input type="submit" value="Submit">
 
 
 
