Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,5 @@
 
-<form action="/articles" method="post">
+<form action="/articles" method="patch">
 <label for="title"><%=@article.title%></label>
 <input type="text" name="title">
 <label for="content"><%=@article.content%></label>
