--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,11 +1,12 @@
 
-<form action="/articles" method="patch">
+<form action="/articles/<%= @article.id %>" method="post">
+<input id="hidden" type="hidden" name="_method" value="patch">
 <label for="title"><%=@article.title%></label>
 <input type="text" name="title">
 <label for="content"><%=@article.content%></label>
 <input type="text" name="content">
 <input type="submit" value="Submit">
-<input id="hidden" type="hidden" name="_method" value="PATCH">
+
 
 
 
