Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 
 <form action="/articles/<%= @article.id %>" method="post">
-<input id="hidden" type="hidden" name="_method" value="patch">
+<input id="hidden" type="hidden" name="_method" value="PATCH">
 <label for="title"><%=@article.title%></label>
 <input type="text" name="title">
 <label for="content"><%=@article.content%></label>
