--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,10 @@
 <main>
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
-
+<form action="/articles/<%= @article.id %>" method="post">
+<input id="hidden" type="hidden" name="_method" value="DELETE">
+<input type="submit" value="delete">
+</form>  
 
 </main>
 </body>
